--- a/app/src/main/res/layout/dividelayout.xml
+++ b/app/src/main/res/layout/dividelayout.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FF5F5F">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -32,7 +33,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="10sp"
-            android:text="INSTRUCTIONS: Input 3 numbers"
+            android:text="INSTRUCTIONS: Input 2 numbers"
             android:textAlignment="viewStart"
             android:textColor="@color/black"
             android:textSize="18sp"
@@ -96,7 +97,6 @@
             app:layout_constraintTop_toBottomOf="@+id/tvsymbol1" />
 
 
-
         <Button
             android:id="@+id/btnCompute"
             android:layout_width="163dp"
@@ -107,9 +107,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etnumber1" />
-
-
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
