--- a/app/src/main/res/layout/ftoclayout.xml
+++ b/app/src/main/res/layout/ftoclayout.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
 
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="#FF5F5F">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -62,7 +63,6 @@
             app:layout_constraintTop_toBottomOf="@+id/tvTwo" />
 
 
-
         <Button
             android:id="@+id/btnCompute"
             android:layout_width="163dp"
@@ -73,9 +73,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etNumber" />
-
-
-
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
