--- a/app/src/main/res/layout/percentlayout.xml
+++ b/app/src/main/res/layout/percentlayout.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FF5F5F"
     tools:context=".percentage">
 
     <TextView
@@ -76,6 +77,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="120dp"
+        android:autofillHints="(%)"
         android:ems="10"
         android:hint="@string/txt_number"
         android:inputType="number"
@@ -84,8 +86,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tvTwo"
-        android:autofillHints="(%)" />
+        app:layout_constraintTop_toBottomOf="@+id/tvTwo" />
 
     <Button
         android:id="@+id/btnCompute"
@@ -97,7 +98,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/etNumber" />
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
